--- a/app/src/main/res/layout/activity_add_routine.xml
+++ b/app/src/main/res/layout/activity_add_routine.xml
@@ -11,10 +11,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/alegreya_black"
         android:text="Title"
-        android:textStyle="bold"
+        android:textAppearance="@style/Base.Widget.AppCompat.Spinner.Underlined"
         android:textSize="25dp"
-        android:textAppearance="@style/Base.Widget.AppCompat.Spinner.Underlined" />
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/edit_text_routine_name"
@@ -28,19 +29,31 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/alegreya_black"
         android:text="Date"
-        android:textStyle="bold"
+        android:textAppearance="@style/Base.Widget.AppCompat.Spinner.Underlined"
         android:textSize="25dp"
-        android:textAppearance="@style/Base.Widget.AppCompat.Spinner.Underlined" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/text_view_routine_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Select Date"
+        android:gravity="center"
         android:inputType="textMultiLine"
-        android:textSize="20dp"
+        android:text="Select Date"
+        android:textSize="20dp" />
 
-        android:gravity="center" />
+    <TextView
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/alegreya_black"
+        android:gravity="center"
+        android:paddingTop="35dp"
+        android:text="Workouts"
+        android:textAppearance="@style/Base.Widget.AppCompat.Spinner.Underlined"
+        android:textSize="25dp"
+        android:textStyle="bold" />
 
 </LinearLayout>
