--- a/app/src/main/res/layout/editworkouts_layout.xml
+++ b/app/src/main/res/layout/editworkouts_layout.xml
@@ -3,18 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Routine.EditRoutines">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/recycler_view_workout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/routine_item">
+        tools:listitem="@layout/workout_item">
 
     </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/button_add_routine"
+        android:id="@+id/button_add_workout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
