--- a/app/src/main/res/layout/exerciseabs_item.xml
+++ b/app/src/main/res/layout/exerciseabs_item.xml
@@ -20,7 +20,8 @@
             android:maxLines="1"
             android:gravity="left|top"
             android:layout_alignParentStart="true"
-            android:ellipsize="end" />
+            android:ellipsize="end"
+            android:layout_toStartOf="@+id/text_view_exerciseabs_musslegroup"/>
 
 
         <TextView
@@ -29,7 +30,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/text_view_exerciseabs_text"
             android:text="Description"
-            android:ellipsize="end"/>
+            android:ellipsize="end"
+            android:layout_toStartOf="@+id/text_view_exerciseabs_musslegroup"
+            android:layout_alignParentStart="true" />
 
         <TextView
             android:id="@+id/text_view_exerciseabs_musslegroup"
