--- a/app/src/main/res/layout/exerciseabs_item.xml
+++ b/app/src/main/res/layout/exerciseabs_item.xml
@@ -21,7 +21,7 @@
             android:gravity="left|top"
             android:layout_alignParentStart="true"
             android:ellipsize="end"
-            android:layout_toStartOf="@+id/text_view_exerciseabs_musslegroup"/>
+            android:layout_toStartOf="@+id/text_view_exerciseabs_musclegroup"/>
 
 
         <TextView
@@ -31,16 +31,16 @@
             android:layout_below="@id/text_view_exerciseabs_text"
             android:text="Description"
             android:ellipsize="end"
-            android:layout_toStartOf="@+id/text_view_exerciseabs_musslegroup"
+            android:layout_toStartOf="@+id/text_view_exerciseabs_musclegroup"
             android:layout_alignParentStart="true" />
 
         <TextView
-            android:id="@+id/text_view_exerciseabs_musslegroup"
+            android:id="@+id/text_view_exerciseabs_musclegroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerInParent="true"
-            android:text="Mussle Group"/>
+            android:text="Muscle Group"/>
 
 
     </RelativeLayout>
