--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,25 +19,15 @@
         <ImageButton
             android:id="@+id/imageButton_WorkoutActivity"
             android:layout_width="match_parent"
-            android:layout_height="233dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="top"
             android:adjustViewBounds="true"
             android:clickable="true"
             android:contentDescription="@android:string/ok"
             android:focusable="true"
-            android:padding="2dp"
+            android:padding="20dp"
             android:src="@drawable/main_workoutstring" />
 
-        <ImageButton
-            android:id="@+id/imageButton_HistoryActivity"
-            android:layout_width="match_parent"
-            android:layout_height="189dp"
-            android:clickable="true"
-            android:contentDescription="@android:string/ok"
-            android:focusable="true"
-            android:foregroundGravity="center_vertical|center"
-            android:padding="2dp"
-            android:src="@drawable/main_historystring" />
 
         <ImageButton
             android:id="@+id/imageButton_EditActivity"
@@ -48,8 +38,8 @@
             android:contentDescription="@android:string/ok"
             android:focusable="true"
             android:foregroundGravity="bottom|fill_vertical"
-            android:padding="2dp"
+            android:padding="20dp"
             android:src="@drawable/main_editworkoutsstring" />
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
