--- a/app/src/main/res/layout/workoutnow_layout.xml
+++ b/app/src/main/res/layout/workoutnow_layout.xml
@@ -28,15 +28,17 @@
         android:layout_below="@id/workoutnow_current_routine"
         />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_workoutNow"
+
+    <ExpandableListView
+        android:id="@+id/lvExp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/cardview_workoutnow"
-        android:layout_below="@id/workoutnow_current_workout"
-        >
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_above="@+id/linearLayout2"
+        android:layout_below="@+id/linearLayout1"
+        android:layout_centerInParent="true"
 
-    </android.support.v7.widget.RecyclerView>
-
+        android:cacheColorHint="#00000000" />
 
 </LinearLayout>
