--- a/app/src/main/res/layout/workoutnow_list_group_expandableview.xml
+++ b/app/src/main/res/layout/workoutnow_list_group_expandableview.xml
@@ -5,16 +5,48 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="8dp"
-    android:background="#c6f68d">
-
+    android:background="@color/groupColor">
 
     <TextView
         android:id="@+id/lblListHeader"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:textSize="17dp"
+        android:layout_centerInParent="true"
+        android:paddingStart="25dp"
         android:textColor="#000000"
-        />
+        android:textSize="17dp" />
 
+
+    <!--
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+        <TextView
+            android:id="@+id/ListHeaderPrev"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Prev"
+            android:textColor="#000000"
+            android:textSize="17dp"
+            android:textAlignment="center"
+            android:background="@color/prevColor"
+            />
+
+        <TextView
+            android:id="@+id/ListHeaderNow"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Now"
+            android:textColor="#000000"
+            android:textSize="17dp"
+            android:textAlignment="center"
+            android:background="@color/nowColor"/>
+
+    </LinearLayout>
+-->
 </LinearLayout>
