--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#605fb8</color>
+    <color name="prevColor">#d7d7d7</color>
+    <color name="nowColor">#36e236</color>
+    <color name="groupColor">#63e963</color>
 </resources>
