--- a/app/src/main/res/layout/workout_item_with_date.xml
+++ b/app/src/main/res/layout/workout_item_with_date.xml
@@ -7,12 +7,12 @@
     android:layout_marginTop="8dp">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp">
 
         <TextView
-            android:id="@+id/text_view_workout_text"
+            android:id="@+id/text_view_workout_text_with_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Workout Name"
@@ -24,13 +24,13 @@
 
 
         <TextView
-            android:id="@+id/text_view_workout_exercises"
+            android:id="@+id/text_view_workout_date_with_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/text_view_workout_text"
+            android:layout_below="@id/text_view_workout_text_with_date"
             android:gravity="right|bottom"
             android:layout_alignParentEnd="true"
-            android:text="Date"/>
+            android:text="exercises"/>
 
 
     </RelativeLayout>
