--- a/app/src/main/res/layout/activity_add_routine.xml
+++ b/app/src/main/res/layout/activity_add_routine.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:hint="Mass, Fit etc"
         android:textSize="20dp"
-        android:inputType="text"
+        android:inputType="textCapSentences"
         android:gravity="center" />
 
     <TextView
