--- a/app/src/main/res/layout/workoutnow_list_group_expandableview.xml
+++ b/app/src/main/res/layout/workoutnow_list_group_expandableview.xml
@@ -1,63 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="8dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="8dp"
     android:background="@color/groupColor">
 
     <TextView
         android:id="@+id/lblListHeader"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="380dp"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:paddingStart="25dp"
-        android:textColor="#000000"
-        android:textSize="17dp"
         android:layout_weight="1"
-        />
+        android:paddingStart="30dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:textColor="#000000"
+        android:textSize="17dp" />
 
     <ImageButton
         android:id="@+id/add_button_group_item"
         android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_height="fill_parent"
         android:layout_centerInParent="true"
         android:background="@color/groupColor"
         android:focusable="false"
-        android:src="@drawable/ic_add_group" />
+        android:src="@drawable/ic_add_group"
+        android:layout_gravity="center_horizontal|end"/>
 
-    <!--
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-
-        <TextView
-            android:id="@+id/ListHeaderPrev"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Prev"
-            android:textColor="#000000"
-            android:textSize="17dp"
-            android:textAlignment="center"
-            android:background="@color/prevColor"
-            />
-
-        <TextView
-            android:id="@+id/ListHeaderNow"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Now"
-            android:textColor="#000000"
-            android:textSize="17dp"
-            android:textAlignment="center"
-            android:background="@color/nowColor"/>
-
-    </LinearLayout>
--->
-</LinearLayout>
+<!--</LinearLayout>-->
+</android.support.v7.widget.CardView>
