--- a/app/src/main/res/layout/editexerciseabs_layout.xml
+++ b/app/src/main/res/layout/editexerciseabs_layout.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Workout.EditWorkouts">
+    tools:context=".Workout.ShowRoutineWorkouts">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_exerciseabs"
