--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="nowColor">#36e236</color>
     <color name="groupColor">#63e963</color>
     <color name="colorDefault">#fafafa</color>
+    <color name="black">#000000</color>
 
 </resources>
