--- a/app/src/main/res/layout/add_edit_exerciseabs.xml
+++ b/app/src/main/res/layout/add_edit_exerciseabs.xml
@@ -87,16 +87,17 @@
     -->
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="5dp"
+        android:completionThreshold="0"
         android:hint="Operation name">
 
         <com.google.android.material.textfield.MaterialAutoCompleteTextView
             android:id="@+id/autoCompleteTextView_operationName"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
         </com.google.android.material.textfield.MaterialAutoCompleteTextView>
 
@@ -126,18 +127,20 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
+        android:completionThreshold="0"
         android:hint="Nickname">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/textInputEditText_Nickname"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
-        </com.google.android.material.textfield.TextInputEditText>
+        <com.google.android.material.textfield.MaterialAutoCompleteTextView
+            android:id="@+id/autoCompleteTextView_Nickname"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </com.google.android.material.textfield.MaterialAutoCompleteTextView>
 
 
     </com.google.android.material.textfield.TextInputLayout>
