--- a/app/src/main/res/layout/activity_view_practical_workouts.xml
+++ b/app/src/main/res/layout/activity_view_practical_workouts.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Routine.ShowRoutines">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_workout_view_practical_workouts"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/workout_item">
 
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button_add_workout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,4 +22,4 @@
         android:layout_margin="32dp"
         android:src="@drawable/ic_add" />
 
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
