--- a/app/src/main/res/layout/add_edit_exerciseabs.xml
+++ b/app/src/main/res/layout/add_edit_exerciseabs.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".ExerciseAbstract.ShowAllAbstractExercises">
+    tools:context=".ExerciseAbstract.AddEditExerciseAbsActivity">
 <!--TODO: go to video and the activity that opens the new exercise layout -->
     <TextView
         android:layout_width="match_parent"
@@ -19,21 +19,21 @@
         />
 <!--    android:textAppearance="@style/TextAppearance.AppCompat.Body1"-->
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingStart="15dp"
         android:paddingEnd="15dp">
 
-        <android.support.design.widget.TextInputEditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputEditText_exName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="false">
 
-        </android.support.design.widget.TextInputEditText>
+        </com.google.android.material.textfield.TextInputEditText>
 
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <!-- https://stackoverflow.com/questions/5049852/android-drawing-separator-divider-line-in-layout-->
     <View
