--- a/app/src/main/res/layout/add_edit_exerciseabs.xml
+++ b/app/src/main/res/layout/add_edit_exerciseabs.xml
@@ -31,7 +31,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:enabled="false"
-            android:textColor="@color/black"
+            android:textColor="#FF0000"
+            android:textSize="22sp"
             android:gravity="center">
 
         </com.google.android.material.textfield.TextInputEditText>
@@ -277,7 +278,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
-        android:hint="Separate Hands?">
+        android:hint="Separate Sides? (Default is no)">
 
         <AutoCompleteTextView
             android:id="@+id/autoCompleteTextView_SeparateHands"
