--- a/app/src/main/res/layout/add_edit_routine.xml
+++ b/app/src/main/res/layout/add_edit_routine.xml
@@ -14,7 +14,8 @@
         android:fontFamily="@font/alegreya_black"
         android:text="Routine Name:"
         android:textAppearance="@style/Base.Widget.AppCompat.Spinner.Underlined"
-        android:textSize="25dp"
+        android:textColor="@color/lightGrey"
+        android:textSize="25sp"
         android:textStyle="bold" />
 
     <EditText
@@ -22,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Mass, Fit etc"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:inputType="textCapSentences"
         android:gravity="center" />
 
@@ -32,7 +33,8 @@
         android:fontFamily="@font/alegreya_black"
         android:text="Date:"
         android:textAppearance="@style/Base.Widget.AppCompat.Spinner.Underlined"
-        android:textSize="25dp"
+        android:textColor="@color/lightGrey"
+        android:textSize="25sp"
         android:textStyle="bold" />
 
     <TextView
@@ -42,7 +44,7 @@
         android:gravity="center"
         android:inputType="textMultiLine"
         android:text="Select Date"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
 
 
 </LinearLayout>
