--- a/app/src/main/res/layout/dropdown_item.xml
+++ b/app/src/main/res/layout/dropdown_item.xml
@@ -4,9 +4,9 @@
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
     android:padding="14dp"
-    android:textColor="@color/black"
     android:textStyle="bold"
     android:textSize="16sp"
     android:text="textView"
 />
+    <!--    android:textColor="@color/black"-->
 
