--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="groupColor">#63e963</color>
     <color name="colorDefault">#fafafa</color>
     <color name="black">#000000</color>
+    <color name="lightGrey">#A0A0A0</color>
 
 </resources>
