--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="colorDefault">#fafafa</color>
     <color name="black">#000000</color>
     <color name="lightGrey">#A0A0A0</color>
+    <color name="red">#FF0000</color>
 
 </resources>
