--- a/app/src/main/res/drawable/ic_arrow_forward.xml
+++ b/app/src/main/res/drawable/ic_arrow_forward.xml
@@ -1,5 +1,24 @@
-<vector android:height="24dp" android:tint="@color/groupColor"
-    android:viewportHeight="24.0" android:viewportWidth="24.0"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M12,4l-1.41,1.41L16.17,11H4v2h12.17l-5.58,5.59L12,20l8,-8z"/>
+<vector
+    android:height="30dp"
+    android:width="30dp"
+    android:viewportHeight="24.0"
+    android:viewportWidth="24.0"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    >
+
+<!--    https://stackoverflow.com/questions/48104161/how-to-add-a-background-to-a-vector-asset-that-i-want-to-use-as-my-apps-icon-->
+    <group>
+        <path android:name="background_square"
+            android:fillColor="?android:colorBackground"
+            android:pathData="M0,0 L24,0 L24,24 L0,24 z"
+            android:strokeColor="?android:colorBackground"
+            />
+        <path android:name="arrow"
+            android:fillColor="#FF0000"
+            android:pathData="M12,4l-1.41,1.41L16.17,11H4v2h12.17l-5.58,5.59L12,20l8,-8z"
+            android:strokeColor="?android:colorBackground"
+            />
+    </group>
+
+
 </vector>
