--- a/app/src/main/res/layout/workoutnow_layout.xml
+++ b/app/src/main/res/layout/workoutnow_layout.xml
@@ -8,35 +8,42 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/workoutnow_current_routine"
-        android:layout_width="match_parent"
+    <LinearLayout
         android:layout_height="wrap_content"
-        android:text="Current Routine"
-        android:textAlignment="center"
-        android:textSize="20dp"
-        android:background="#90ee02"
-        />
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginTop="5dp"
+        >
+        <TextView
+            android:id="@+id/workoutnow_current_routine"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Current Routine"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            />
 
-    <TextView
-        android:id="@+id/workoutnow_current_workout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Current Workout"
-        android:textAlignment="center"
-        android:textSize="15dp"
-        android:background="#c6f68d"
-        android:layout_below="@id/workoutnow_current_routine"
-        />
+        <TextView
+            android:id="@+id/workoutnow_current_workout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Current Workout"
+            android:textAlignment="center"
+            android:textSize="20sp"/>
+    </LinearLayout>
+
+
     <TextView
         android:id="@+id/workoutnow_workout_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Workout Date"
         android:textAlignment="center"
-        android:textSize="15dp"
-        android:background="#e1f9c5"
-        android:layout_below="@id/workoutnow_current_workout"
+        android:textSize="15sp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         />
 
 
@@ -44,11 +51,6 @@
         android:id="@+id/lvExp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_above="@+id/linearLayout2"
-        android:layout_below="@+id/linearLayout1"
-        android:layout_centerInParent="true"
         android:cacheColorHint="#00000000" />
 
 </LinearLayout>
