new main screen layout - fixed names to be with more logic - fixed selected wokrout with no exercises - fixed select workout listview view
Signed-off-by: Tamir Mishali <tamirmishali@gmail.com>

--- a/app/src/main/res/layout/workoutnow_list_group_expandableview.xml
+++ b/app/src/main/res/layout/workoutnow_list_group_expandableview.xml
@@ -47,7 +47,7 @@
                 android:layout_height="fill_parent"
                 android:background="@color/red"
                 android:focusable="false"
-                android:src="@drawable/ic_add_group"
+                android:src="@drawable/ic_workout_now_add_group"
                 android:layout_gravity="center_horizontal|end"
                 android:contentDescription="Add new set" />
 
