--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,39 +16,167 @@
         app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="parent">
 
-        <ImageButton
-            android:id="@+id/imageButton_WorkoutNowActivity"
+
+        <LinearLayout
+            android:id="@+id/linearLayout_workout_now"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            android:clickable="true"
-            android:focusable="true"
-            android:padding="5dp"
-            android:src="@drawable/main_workoutstring" />
+            android:layout_weight="0.6"
+            android:padding="10dp"
+            android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/imageButton_History"
+            <!-- android:src="@drawable/ic_baseline_edit_24"-->
+            <ImageView
+                android:id="@+id/iv_new_or_edit_workout"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center_vertical"
+                android:icon="@drawable/ic_main_activity_edit_pencil">
+                </ImageView>
+
+            <!-- https://stackoverflow.com/questions/5049852/android-drawing-separator-divider-line-in-layout-->
+            <View
+                android:layout_width="2dp"
+                android:layout_height="150dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                android:background="?android:attr/listDivider" />
+
+            <LinearLayout
+                android:id="@+id/linearLayout_workout_now_partial"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="start|center_vertical"
+                android:layout_marginStart="10dp">
+
+                <TextView
+                    android:id="@+id/linearLayout_workout_now_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:textSize="30sp"
+                    android:textStyle="bold"
+                    android:layout_gravity="center_horizontal">
+                </TextView>
+
+                <!-- https://stackoverflow.com/questions/3482742/what-is-the-difference-between-gravity-and-layout-gravity-in-android-->
+                <TextView
+                    android:id="@+id/linearLayout_workout_now_tv_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:textSize="23sp"
+                    android:text="Routine: info\nWorkout: info"
+                    android:layout_gravity="start">
+                </TextView>
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout_history"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            android:clickable="true"
-            android:focusable="true"
-            android:padding="5dp"
-            android:src="@drawable/main_historystring"/>
+            android:layout_weight="0.6"
+            android:padding="10dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_workouts_history"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center_vertical"
+                android:icon="@drawable/ic_main_activity_history"
+                android:src="@drawable/ic_main_activity_history">
+            </ImageView>
+
+            <!-- https://stackoverflow.com/questions/5049852/android-drawing-separator-divider-line-in-layout-->
+            <View
+                android:layout_width="2dp"
+                android:layout_height="150dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                android:background="?android:attr/listDivider" />
+
+            <LinearLayout
+                android:id="@+id/linearLayout_history_partial"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="start|center_vertical"
+                android:layout_marginStart="10dp">
 
 
-        <ImageButton
-            android:id="@+id/imageButton_EditActivity"
+                <!-- https://stackoverflow.com/questions/3482742/what-is-the-difference-between-gravity-and-layout-gravity-in-android-->
+                <TextView
+                    android:id="@+id/linearLayout_history_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:textSize="30sp"
+                    android:textStyle="bold"
+                    android:text="@string/workout_history"
+                    android:layout_gravity="center_horizontal">
+                </TextView>
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+
+<!--    Edit Workouts    -->
+        <LinearLayout
+            android:id="@+id/linearLayout_edit_workouts"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:baselineAlignBottom="true"
-            android:clickable="true"
-            android:focusable="true"
-            android:padding="5dp"
-            android:src="@drawable/main_editworkoutsstring" />
+            android:layout_weight="0.6"
+            android:padding="10dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_edit_workouts"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center_vertical"
+                android:icon="@drawable/ic_main_activity_construction"
+                android:src="@drawable/ic_main_activity_construction">
+            </ImageView>
+
+            <!-- https://stackoverflow.com/questions/5049852/android-drawing-separator-divider-line-in-layout-->
+            <View
+                android:layout_width="2dp"
+                android:layout_height="150dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                android:background="?android:attr/listDivider" />
+
+            <LinearLayout
+                android:id="@+id/linearLayout_edit_workouts_partial"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="start|center_vertical"
+                android:layout_marginStart="10dp">
+
+
+                <!-- https://stackoverflow.com/questions/3482742/what-is-the-difference-between-gravity-and-layout-gravity-in-android-->
+                <TextView
+                    android:id="@+id/linearLayout_edit_workouts_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:textSize="30sp"
+                    android:textStyle="bold"
+                    android:text="@string/edit_workouts"
+                    android:layout_gravity="center_horizontal">
+                </TextView>
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+
     </LinearLayout>
 
 </RelativeLayout>
