--- a/app/src/main/res/layout/activity_view_practical_workouts.xml
+++ b/app/src/main/res/layout/activity_view_practical_workouts.xml
@@ -20,6 +20,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="32dp"
-        android:src="@drawable/ic_add" />
+        android:src="@drawable/ic_general_add" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
