--- a/app/src/main/res/layout/workoutnow_select_workout_listview.xml
+++ b/app/src/main/res/layout/workoutnow_select_workout_listview.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/workoutnow_listview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:divider="@android:color/background_light"
-        android:dividerHeight="8dp"
+        android:dividerHeight="3dp"
         android:padding="5dp"
+        tools:listitem="@layout/workoutnow_select_workout_listview_item"
         >
     </ListView>
 
 </LinearLayout>
+
+
+<!--android:divider="@android:color/background_light"-->
