--- a/app/src/main/res/menu/add_workout_menu.xml
+++ b/app/src/main/res/menu/add_workout_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/save_workout"
-        android:icon="@drawable/ic_save"
+        android:icon="@drawable/ic_general_save"
         android:title="Save"
         app:showAsAction="ifRoom" ></item>
 
