--- a/app/src/main/res/menu/editworkout_menu.xml
+++ b/app/src/main/res/menu/editworkout_menu.xml
@@ -3,6 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/delete_all_workouts"
-        android:title="Delete all workouts"
+        android:title="Clear all exercises"
         app:showAsAction="never"/>
 </menu>
