--- a/app/src/main/res/drawable/card_ripple_background.xml
+++ b/app/src/main/res/drawable/card_ripple_background.xml
@@ -1,9 +1,8 @@
-<!-- res/drawable/card_ripple_background.xml -->
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="?attr/colorControlHighlight">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorDefault"/>
+            <solid android:color="@color/white"/>
         </shape>
     </item>
 </ripple>
