--- a/app/src/main/res/drawable/header_gradient_background.xml
+++ b/app/src/main/res/drawable/header_gradient_background.xml
@@ -1,8 +1,7 @@
-<!-- res/drawable/header_gradient_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:type="linear"
-        android:angle="45"
-        android:startColor="#6A82FB"
-        android:endColor="#FC5C7D"/>
+        android:angle="90"
+        android:startColor="#1E1E1E"
+        android:endColor="#2C2C2C"/>
 </shape>
